@@ -22,7 +22,7 @@ setup_mode off
 
 
 # Use a file to save logs messages, if not defined stderr and syslog is used. (default: not defined)
-;logfile
+;logfile /tmp/motion.log
 
 # Level of log messages [1..9] (EMR, ALR, CRT, ERR, WRN, NTC, ERR, DBG, ALL). (default: 4 / ERR) 
 log_level 4
